Sime's second addition

--- a/tictactoe.html
+++ b/tictactoe.html
@@ -3,11 +3,11 @@
 <font size="7">
 <table style="text-align:center" border="20">
 <!-- Do not move this table content into multiple lines; keep it in a single line to create conflicts -->
-<<<<<<< HEAD
-  <tr align="center" height="200">X<td width="300"></td><td width="300">X</td><td width="300"></td></tr><tr align="center" height="200"><td></td><td></td><td></td></tr><tr align="center" height="200"><td></td><td></td><td></td></tr>
-=======
+
+  <tr align="center" height="200">X<td width="300"></td><td width="300">X</td><td width="300"></td></tr><tr align="center" height="200"><td>sime</td><td>sime</td><td>sime</td></tr><tr align="center" height="200"><td></td><td></td><td></td></tr>
+
   <tr align="center" height="200"><td width="300"></td><td width="300">X</td><td width="300"></td></tr><tr align="center" height="200"><td></td><td>0</td><td></td></tr><tr align="center" height="200"><td></td><td></td><td></td></tr>
->>>>>>> 40abd66493c3eeda76d7507e8dea8b8deeef17f7
+
 <!-- Do not move this table content into multiple lines; keep it in a single line to create conflicts -->
 </table>
 </font>
